2008-07-02	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/appearance-dialog/main.c: Sort user interface and
	  icon themes. Use the only column (0) for searching.

2008-07-02	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/appearance-dialog/main.c: Load icon themes properly.
	  I used some of the code from the old mcs ui plugin.
	* AUTHORS: I took the liberty to add my name here. 

2008-07-01	Nick Schermer <nick@xfce.org>

	* dialogs/accessibility-settings/accessibility-dialog.glade,
	  dialogs/mouse-settings/mouse-dialog.glade,
	  dialogs/appearance-settings/appearance-dialog.glade,
	  dialogs/keyboard-settings/keyboard-dialog.glade: Make labels next
	  to the sliders small italic, like in Xfwm4; Make mnemonic widgets
	  work and some a buch of new ones where possible/suitable; Fix
	  case usage in labels.

2008-07-01	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c: Destroy the dialog on exit
	  and Xfce4-mouse-settings in the version information.
	* dialogs/mouse-settings/Makefile.am: Add the G_LOG_DOMAIN
	  for glib warnings, errors and messages in the code.

2008-06-29	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-settings-manager/xfce-settings-manager-dialog.c: 
	  Add 6px border to the scrolled window in order to align it
	  with the dialog buttons.

2008-06-29	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/accessibility-settings/accessibility-dialog.glade,
	  dialogs/appearance-settings/appearance-dialog.glade,
	  dialogs/keyboard-settings/keyboard-dialog.glade,
	  dialogs/mouse-settings/mouse-dialog.glade: Change border of
	  toplevel boxes inside notebooks to 12px for the sake of 
	  consistency (thunar does the same). Add bottom padding of
	  alignments below section titles to 6px.

2008-06-29	Nick Schermer <nick@xfce.org>

	* xfce4-settings-manager/xfce-settings-manager-dialog.c: Dialog
	  default size is 600x400px; Changed window icon name to
	  preferences-desktop instead of xfce4-settings, since that's