@@ -1,3 +1,10 @@
+2008-07-03	Nick Schermer <nick@xfce.org>
+
+	* dialogs/appearance-dialog/main.c: Fix indentation of Jannis'
+	  code to match the rest. Add Icon theme comments in the list
+	  for Gtk 2.12. Make some strings static and merge the
+	  selection_changed functions into one. Plug some leaks.
+
 2008-07-02	Jannis Pohlmann <jannis@xfce.org>
 
 	* dialogs/appearance-dialog/main.c: Sort user interface and
